package io.conrad.account;

import java.util.List;

public class AccountNumber {
    public AccountNumber(List<AccountNumberCharacter> accountNumberCharacters) {
    }
}
