package io.conrad.account;

public class AccountNumberCharacter {
    public AccountNumberCharacter(char character) {
    }
}
