package io.conrad.format;

import io.conrad.account.AccountNumber;

import java.util.List;

public class AccountNumberFormatter {
    public String format(List<AccountNumber> accountNumbers) {
        return null;
    }
}
