package io.conrad.parsing;

import io.conrad.account.AccountNumber;

public class AccountNumberParser {
    public AccountNumber parseAccountNumber(String entry) {
        return null;
    }
}
